# cloudsmith-cs-interview-candidate

./: README.md  pyproject.toml
.github/workflows/: build_package.yml  promote_package.yml  realease_package.yml
