[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package"
dynamic = ["version"]
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.version]
path = "src/example_package/__init__.py" 
